some of the main section has been completed in Js

--- a/Main/main.html
+++ b/Main/main.html
@@ -36,37 +36,14 @@
             <div class="img__card">
                 <img src="../images/o'tkir.png" alt="">
             </div>
-            <div class="img__info-row">
-
-                <div class="img__info">
-                    <div class="dateOfBirth">
-                        <p class="birth__title">Tavallud sanasi</p>
-                        <p class="birth">5-Avg 1941</p>
-                        <p class="birth__city">Toshkent, Uzbekistan</p>
-                    </div>
-                </div>
-                <span class="dash"></span>
-                <div class="img__info">
-                    <div class="dateOfBirth">
-                        <p class="birth__title">Tavallud sanasi</p>
-                        <p class="birth">24-MAY 2013</p>
-                        <p class="birth__city">Toshkent, Uzbekistan</p>
-                    </div>
-                </div>
-
-            </div>
+            <div class="img__info-row"></div>
         </div>
 
         <div class="section__content">
+
             <div class="content__row">
                 <div class="content__title-row">
-                    <h1 class="content__title">O’tkir Hoshimov</h1>
-                    <p class="content__text">Oʻtkir Hoshimov 1941 yil Toshkent viloyatining Zangiota (hozirgi Chilonzor) tumanidagi Doʻmbiravot mavzeida tugʻildi. Oʻ. Hoshimov mehnat faoliyatini erta boshladi. Toshkent Davlat universiteti (hozirgi Oʻzbekiston Milliy universiteti)ning
-                        jurnalistika kulliyotida oʻqish bilan baravar gazeta tahririyatida ishladi. 1959 yildan 1963 yilgacha “Temiryoʻlchi”, “Qizil Oʻzbekiston”, “Transportniy rabochiy” gazetalarida xat tashuvchi, mussaxhih, tarjimon boʻlib ishladi.
-                        Soʻng “Toshkent haqiqati” gazetasida adabiy xodim (1963–1966), “Toshkent oqshomi” gazetasida boʻlim mudiri (1966–1982), Gʻ. Gʻulom nomidagi Adabiyot va sanʼat nashriyotida bosh muharrir oʻrinbosari (1982–1985) boʻldi. 1985–1995
-                        yillarda “Sharq yulduzi” jurnaliga bosh muharrirlik qildi. 1995 yildan 2005 yilgacha Oʻzbekiston Respublikasi Oliy Majlisining Matbuot va axborot qoʻmitasi raisi lavozimida ishladi. 2005 yildan “Teatr“ jurnalida bosh muharrir boʻlib
-                        ishladi.
-                    </p>
+
                 </div>
 
                 <div class="content__other-text">
@@ -85,48 +62,22 @@
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
 
+                    <div class="creature__card">
+                        <img src="../images/asarlari.png" alt="">
+                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
+                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
+                    </div>
 
                 </div>
             </div>
 
         </div>
     </section>
+
+    <div class="delete__container">
+        <button id="delete">Delete</button>
+    </div>
 
     <script src="main.js"></script>
 </body>
