--- a/add-authors/authors.html
+++ b/add-authors/authors.html
@@ -45,6 +45,8 @@
                 <input type="text" name="lastName" placeholder="Last Name">
                 <input type="date" name="date_of_birth" placeholder="date of Birth">
                 <input type="date" name="date_of_death" placeholder="date of Death">
+                <textarea name="description" id="description" cols="30" rows="10" placeholder="description..."></textarea>
+
                 <button id="submit" type="submit">Submit</button>
             </form>
         </div>
