--- a/Detailes/detailes.html
+++ b/Detailes/detailes.html
@@ -40,30 +40,8 @@
             </div>
 
             <div class="main__content">
-                <div class="main__title-container">
-                    <h1 class="main__title">Qo’rqma</h1>
-                    <p class="main__title-name">Javlon Jovliyev<i class="fa-solid fa-star"> 4.1</i></p>
-                </div>
+                <div class="content">
 
-                <ul class="main__ul-container">
-                    <li>Sahifalar soni: <span>376</span></li>
-                    <li>Chop etilgan: <span>2021</span></li>
-                    <li>Janri: <span>Tarixiy</span></li>
-                    <li>Nashriyot <span>Nihol nashr</span></li>
-                </ul>
-
-                <div class="main__description">
-                    <div class="main__description-title">
-                        <h2>To’liq ma’lumot</h2>
-                        <i class="fa-solid fa-down-long"></i>
-                        <div class="main__description-line"></div>
-                    </div>
-                    <p class="main__description-text">
-                        Роман ўтган асрнинг йигирманчи йилларида Германияда таҳсил олган ва собиқ Совет Иттифоқи томонидан шафқатсизларча қатл этилган миллат йигит-қизларининг хотирасига бағишланади.
-                        <br> <br> Роман воқеаларини қисқача сўзлар билан ифода этиб бўлмайди. Барчаси шу қадар тиғизки, шошириб қўяди. Мажоз, образ, ифода, ўт, ҳеч кимникига ўхшамаган лиризмни ҳис қиласиз. Миллият, соф муҳаббат, кўринмас ва ошкор фожиалар,
-                        тарих, бугун ва эртанинг бир-бирига кавшарланган ҳалқаси, ростлик даъвосидаги ёлғонлар, руҳ ва қондаги парадокслар сизни ўтмиш ва келажак куйига асир қилади, ўйлатади, йиғлатади ва аччиқ-аччиқ кулдиради. Ўтган аср бошида Германияда
-                        ўқиган талабалар, улар маслаги ва фожиали қисмати бугунги ёшлар мақсади билан бир тарозига тортилади.
-                    </p>
                 </div>
 
                 <div class="main__existFormats">
@@ -190,8 +168,14 @@
             </div>
         </div>
     </footer>
-
+    <!-- end of footer -->
+    <div class="delete__container">
+        <button id="delete">Delete</button>
+    </div>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="detailes.js"></script>
+
 </body>
+
 
 </html>
