--- a/profile/profile.html
+++ b/profile/profile.html
@@ -43,30 +43,30 @@
 
                     <div class="fName">
                         <label for="firstName">First Name</label><br>
-                        <input type="text" id="firstName" placeholder="Please enter your first name">
+                        <input type="text" id="firstName" name="firstName" placeholder="Please enter your first name">
                     </div>
 
                     <div class="lName">
                         <label for="lastName">Last Name</label> <br>
-                        <input type="text" id="lastName" placeholder="Please enter your last name">
+                        <input type="text" id="lastName" name="lastName" placeholder="Please enter your last name">
                     </div>
 
                     <div class="phone__email">
                         <div class="phone">
                             <label for="phone">Phone</label><br>
-                            <input type="number" id="phone" placeholder="Please enter your phone number">
+                            <input type="number" id="phone" name="phone" placeholder="Please enter your phone number">
                         </div>
 
                         <div class="email">
                             <label for="email">Email</label><br>
-                            <input type="email" id="email" placeholder="Please enter your email">
+                            <input type="email" id="email" name="email" placeholder="Please enter your email">
                         </div>
                     </div>
 
                     <div class="form__line"></div>
 
                     <div class="btn__container">
-                        <button id="btn" type="submit">Save Changes</button>
+                        <button class="myAccBtn" id="btn" type="submit">Save Changes</button>
                     </div>
 
                 </form>
@@ -101,7 +101,7 @@
                 <div class="form__line"></div>
 
                 <div class="btn__container">
-                    <button id="btn" type="submit">Save Changes</button>
+                    <button id="secBtn" type="submit">Save Changes</button>
                 </div>
 
             </form>
@@ -111,8 +111,8 @@
                 <h3 class="form__title">Settings</h3>
 
                 <div class="sec__email">
-                    <label for="secEmail">Email</label><br>
-                    <input type="email" id="secEmail" placeholder="admin@mail.ru">
+                    <label for="setEmail">Email</label><br>
+                    <input type="email" id="setEmail" placeholder="admin@mail.ru">
                 </div>
 
                 <div class="radioBtn">
@@ -122,7 +122,7 @@
                 <div class="form__line"></div>
 
                 <div class="btn__container">
-                    <button id="btn" type="submit">Save Changes</button>
+                    <button id="setBtn" type="submit">Save Changes</button>
                 </div>
 
             </form>
