--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,22 +14,26 @@
     <div class="container">
 
         <header>
-            <div id="myAccount__link" class="header__card">
+            <div id="homeLink" class="header__card">
                 <span class="header__span">1</span>
+                <p class="header__name">Home</p>
+            </div>
+
+            <div id="myAccount__link" class="header__card">
+                <span class="header__span">2</span>
                 <p class="header__name">My account</p>
             </div>
 
             <div id="security__link" class="header__card">
-                <span class="header__span">2</span>
+                <span class="header__span">3</span>
                 <p class="header__name">Security</p>
             </div>
 
             <div id="settings__link" class="header__card">
-                <span class="header__span">3</span>
+                <span class="header__span">4</span>
                 <p class="header__name">Settings</p>
             </div>
         </header>
-
         <section>
 
             <div class="myAccount">
@@ -133,6 +137,7 @@
 
     </div>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="profile.js"></script>
 </body>
 
