--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -30,6 +30,10 @@
             <i class="fa-solid fa-angle-down"></i>
         </div>
     </header>
+    <div class="bar">
+        <a href="http://127.0.0.1:5501/profile/profile.html?">Setings</a>
+        <a href="http://127.0.0.1:5501/Sign-in/signin.html">Log Out</a>
+    </div>
 
     <div class="container">
         <main>
