some of the profile part has been completed

--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -31,8 +31,8 @@
         </div>
     </header>
     <div class="bar">
-        <a href="http://127.0.0.1:5501/profile/profile.html?">Setings</a>
-        <a href="http://127.0.0.1:5501/Sign-in/signin.html">Log Out</a>
+        <a href="../profile/profile.html">Setings</a>
+        <a id="logout" href="http://127.0.0.1:5501/Sign-in/signin.html">Log Out</a>
     </div>
 
     <div class="container">
