profile has been completed at all

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -119,7 +119,7 @@
 
                 <div class="sec__email">
                     <label for="setEmail">Email</label><br>
-                    <input type="email" id="setEmail" placeholder="admin@mail.ru">
+                    <input type="email" id="setEmail" name="setEmail" placeholder="admin@mail.ru">
                 </div>
 
                 <div class="radioBtn">
@@ -138,6 +138,7 @@
 
     </div>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="profile.js"></script>
 </body>
 
