js has been changed

--- a/Main/main.html
+++ b/Main/main.html
@@ -55,21 +55,7 @@
 
             <div class="creature">
                 <h3 class="creature__title">Asarlari</h3>
-                <div class="creature__row">
-
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-
-                    <div class="creature__card">
-                        <img src="../images/asarlari.png" alt="">
-                        <h5 class="creature__card-title">Dunyoning ishlari</h5>
-                        <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
-                    </div>
-
-                </div>
+                <div class="creature__row"></div>
             </div>
 
         </div>
