search has been completed at all

--- a/add-book/book.html
+++ b/add-book/book.html
@@ -49,7 +49,7 @@
                 <select name="author" id="author">
                     <option value="">Select Author</option>
                 </select>
-                <textarea name="description" id="description" cols="30" rows="10"></textarea>
+                <textarea name="description" id="description" placeholder="Description..." cols="30" rows="10"></textarea>
                 <button id="submit" type="submit">Submit</button>
             </form>
         </div>
